fix: overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,9 +57,10 @@
 
 body {
   width: 100vw;
+  max-width: 100%;
+  min-height: 100vh;
   overflow-x: hidden;
 }
-
 
 @layer utilities{
   .paused{
